--- a/.classpath
+++ b/.classpath
@@ -2,15 +2,15 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="/home/lucas/workspace/lib/jars/Slick util/slick-util.jar"/>
-	<classpathentry kind="lib" path="/home/lucas/workspace/lib/jars/Mysql connector/mysql-connector-java-5.1.37-bin.jar">
+	<classpathentry kind="lib" path="Deps/LWJGL/jar/lwjgl.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/C:/Users/lucas_000/workspace2/libs/MySQL%20Connector/docs/"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Gymnasiearbete/Deps/LWJGL/native"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/lib/jars/LWJGL 3/lwjgl.jar">
+	<classpathentry kind="lib" path="Deps/MySQL Connector/jar/mysql-connector-java-5.1.37-bin.jar"/>
+	<classpathentry kind="lib" path="Deps/Slick/Jars/slick-util.jar">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="lib/natives/LWJGL 3"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Gymnasiearbete/Deps/Slick/Natives"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
